замена фото салона + лишний код убран

--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,6 @@
 <!--    <meta property="twitter:description" content="Гараж ЦОДД"/>-->
 <!--    <meta property="twitter:image" content="https://garage-codd.ru/seo.png"/>-->
     <title>Гараж ЦОДД</title>
-<!--    <noscript class="loadLater">-->
-<!--        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>-->
-<!--    </noscript>-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <script defer src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </head>
@@ -500,7 +497,7 @@
                         <h1 class="situation_centre-title title"><span class="situation_centre-animation-1">мобильный</span> <span class="situation_centre-animation-2">ситуационный</span> <span class="situation_centre-animation-3">центр</span></h1>
                     </div>
                     <div class="brain_heart-2">
-                        <p class="brain_heart-title">Ситуационный центр ЦОДД&nbsp;&mdash; &laquo;мозг и&nbsp;сердце&raquo; Интеллектуальной транспортной системы Москвы</p>
+                        <p class="brain_heart-title">Ситуационный центр ЦОДД&nbsp;&mdash; &laquo;мозг&nbsp;и&nbsp;сердце&raquo; Интеллектуальной транспортной системы Москвы</p>
                         <p class="brain_heart-text">Отсюда 24/7 следят за&nbsp;движением на&nbsp;дорогах, управляют светофорами, координируют работу Дорожного патруля, собирают данные о&nbsp;трафике и&nbsp;заторах, выводят информацию на&nbsp;электронные табло, координируют разные службы при&nbsp;крупных ДТП и&nbsp;ЧП</p>
                         <img src="./img/layout/pages/main/bus_vector.svg" alt="Ситуационный центр рама">
                     </div>
