--- a/src/pages/bus.html
+++ b/src/pages/bus.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" class="a-fullscreen">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -130,190 +130,6 @@
         <label for="progress-bar" id="progress_text">Загрузка...</label>
     </div>
 </div>
-
-<!--<header class="header">-->
-<!--    <div class="container">-->
-<!--        <div class="header__wrapper">-->
-<!--            <a class="header__logo" href="../index.html">-->
-<!--                <img class="header__logo-img" src="../img/layout/header_logo.svg" alt="logo">-->
-<!--                <p class="header__logo-text">Гараж ЦОДД</p>-->
-<!--            </a>-->
-<!--            <div class="header__info">-->
-<!--                <img class="header__info-img" src="../img/layout/header_models/preview_bus.png" alt="model_preview">-->
-<!--                <div class="header__info-descr">-->
-<!--                    <p class="header__info-title">Man</p>-->
-<!--&lt;!&ndash;                    <p class="header__info-text">1 транспортное средство</p>&ndash;&gt;-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</header>-->
-
-<!--<main class="models">-->
-<!--    <section class="tech_spec">-->
-<!--        <div class="container__content">-->
-<!--            <div class="tech_spec__wrapper">-->
-<!--                <div class="tech_spec__description">-->
-<!--                    <div class="tech_spec__description-grid_wrapper">-->
-<!--                        <div class="tech_spec__titles">-->
-<!--                            <div class="text_spec__texts">-->
-<!--                                <p class="tech_spec__title">Мобильный ситуационный центр</p>-->
-<!--&lt;!&ndash;                                <p class="tech_spec__subtitle">Мобильный аналог Ситуационного центра ЦОДД</p>&ndash;&gt;-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="tech_spec__mission">-->
-<!--                            <p class="tech_spec__text">Задача:</p>-->
-<!--                            <p class="tech_spec__text-descr">Сбор оперативной дорожно-транспортной информации и&nbsp;управление транспортной обстановкой из&nbsp;любой локации</p>-->
-<!--                        </div>-->
-<!--                        <div class="tech_spec__outfit">-->
-<!--                            <p class="tech_spec__text">Экипировка:</p>-->
-<!--                            <ul class="tech_spec__outfit-list">-->
-<!--                                <li class="tech_spec__outfit-item">-->
-<!--                                    <div class="tech_spec__outfit-img">-->
-<!--                                        <img src="../img/layout/outfit/bus/outfit_1.svg" alt="Телескопическая камера" fetchpriority="high">-->
-<!--                                    </div>-->
-<!--                                    <span class="tech_spec__outfit-text">Цифровая камера</span>-->
-<!--                                </li>-->
-<!--                                <li class="tech_spec__outfit-item">-->
-<!--                                    <div class="tech_spec__outfit-img">-->
-<!--                                        <img src="../img/layout/outfit/bus/outfit_2.svg" alt="Тепловизор" fetchpriority="high">-->
-<!--                                    </div>-->
-<!--                                    <span class="tech_spec__outfit-text">Тепловизор</span>-->
-<!--                                </li>-->
-<!--                                <li class="tech_spec__outfit-item">-->
-<!--                                    <div class="tech_spec__outfit-img">-->
-<!--                                        <img src="../img/layout/outfit/bus/outfit_3.svg" alt="Камеры телеобзора" fetchpriority="high">-->
-<!--                                    </div>-->
-<!--                                    <span class="tech_spec__outfit-text">Камеры телеобзора</span>-->
-<!--                                </li>-->
-<!--                                <li class="tech_spec__outfit-item">-->
-<!--                                    <div class="tech_spec__outfit-img">-->
-<!--                                        <img src="../img/layout/outfit/bus/outfit_4.svg" alt="Конференц-зона" fetchpriority="high">-->
-<!--                                    </div>-->
-<!--                                    <span class="tech_spec__outfit-text">Конференц-зона</span>-->
-<!--                                </li>-->
-<!--                                <li class="tech_spec__outfit-item">-->
-<!--                                    <div class="tech_spec__outfit-img">-->
-<!--                                        <img src="../img/layout/outfit/bus/outfit_5.svg" alt="Телекоммуникационное оборудование" fetchpriority="high">-->
-<!--                                    </div>-->
-<!--                                    <span class="tech_spec__outfit-text">Сетевое оборудование</span>-->
-<!--                                </li>-->
-<!--                                <li class="tech_spec__outfit-item">-->
-<!--                                    <div class="tech_spec__outfit-img">-->
-<!--                                        <img src="../img/layout/outfit/bus/outfit_6.svg" alt="Рабочие места" fetchpriority="high">-->
-<!--                                    </div>-->
-<!--                                    <span class="tech_spec__outfit-text">Рабочие места</span>-->
-<!--                                </li>-->
-<!--                            </ul>-->
-<!--                        </div>-->
-<!--                        <div class="tech_spec__button">-->
-<!--                            <a class="tech_spec__btn">-->
-<!--                                <span>Скрыть</span>-->
-<!--                                <img class="rotate" src="../img/layout/icon-arrow.svg" alt="icon-arrow" fetchpriority="high">-->
-<!--                            </a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </section>-->
-<!--    <div class="tech_spec__interior" id="bus">-->
-<!--        <div class="tech_spec__interior-btn">-->
-<!--            <span class="tech_spec__interior-text">В салон</span>-->
-<!--            <div class="arrow-wrapper">-->
-<!--                <img src="../img/layout/interior_arrow.svg" alt="interior_arrow">-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</main>-->
-
-<!--<section class="auto_park">-->
-<!--    <div class="container">-->
-<!--        <div class="auto_park_wrapper">-->
-<!--            <div class="auto_park__control">-->
-<!--                <p class="auto_park__title">Транспорт ЦОДД</p>-->
-<!--                <img class="rotate" src="../img/layout/auto_park_arrow.svg" alt="auto_park_btn">-->
-<!--            </div>-->
-<!--            <div class="auto_park_slider">-->
-<!--                <div class="auto_park_slider-overflow swiper_model">-->
-<!--                    <div class="auto_park_slider-wrapper swiper-wrapper">-->
-<!--                        <div class="gallery_item swiper-slide">-->
-<!--                            <a class="gallery_item_link" href="../pages/amarok.html">-->
-<!--                                <picture>-->
-<!--                                    <source srcset="../img/layout/pages/main/slider/amarok.webp" type="image/webp">-->
-<!--                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok" fetchpriority="high">-->
-<!--                                </picture>-->
-<!--                                &lt;!&ndash;                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/amarok.png" alt="amarok">&ndash;&gt;-->
-<!--                            </a>-->
-<!--                        </div>-->
-<!--                        <div class="gallery_item swiper-slide">-->
-<!--                            <a class="gallery_item_link" href="../pages/ford.html">-->
-<!--                                <picture>-->
-<!--                                    <source srcset="../img/layout/pages/main/slider/ford.webp" type="image/webp">-->
-<!--                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford" fetchpriority="high">-->
-<!--                                </picture>-->
-<!--                                &lt;!&ndash;                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/ford.png" alt="ford">&ndash;&gt;-->
-<!--                            </a>-->
-<!--                        </div>-->
-<!--                        <div class="gallery_item swiper-slide">-->
-<!--                            <a class="gallery_item_link" href="../pages/kater.html">-->
-<!--                                <picture>-->
-<!--                                    <source srcset="../img/layout/pages/main/slider/kater.webp" type="image/webp">-->
-<!--                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater" fetchpriority="high">-->
-<!--                                </picture>-->
-<!--                                &lt;!&ndash;                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/kater.png" alt="kater">&ndash;&gt;-->
-<!--                            </a>-->
-<!--                        </div>-->
-<!--                        <div class="gallery_item swiper-slide">-->
-<!--                            <a class="gallery_item_link" href="../pages/solaris_two.html">-->
-<!--                                <picture>-->
-<!--                                    <source srcset="../img/layout/pages/main/slider/solaris_gray.webp" type="image/webp">-->
-<!--                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris" fetchpriority="high">-->
-<!--                                </picture>-->
-<!--                                &lt;!&ndash;                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/solaris_gray.png" alt="solaris">&ndash;&gt;-->
-<!--                            </a>-->
-<!--                        </div>-->
-<!--                        <div class="gallery_item swiper-slide active">-->
-<!--                            <a class="gallery_item_link" href="#">-->
-<!--                                <picture>-->
-<!--                                    <source srcset="../img/layout/pages/main/slider/bus.webp" type="image/webp">-->
-<!--                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus" fetchpriority="high">-->
-<!--                                </picture>-->
-<!--                                &lt;!&ndash;                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/bus.png" alt="bus">&ndash;&gt;-->
-<!--                            </a>-->
-<!--                        </div>-->
-<!--                        <div class="gallery_item swiper-slide">-->
-<!--                            <a class="gallery_item_link" href="../pages/moskvich.html">-->
-<!--                                <picture>-->
-<!--                                    <source srcset="../img/layout/pages/main/slider/moskvich.webp" type="image/webp">-->
-<!--                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich" fetchpriority="high">-->
-<!--                                </picture>-->
-<!--                                &lt;!&ndash;                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/moskvich.png" alt="moskvich">&ndash;&gt;-->
-<!--                            </a>-->
-<!--                        </div>-->
-<!--                        <div class="gallery_item swiper-slide">-->
-<!--                            <a class="gallery_item_link" href="../pages/velo.html">-->
-<!--                                <picture>-->
-<!--                                    <source srcset="../img/layout/pages/main/slider/velo.webp" type="image/webp">-->
-<!--                                    <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="moskvich" fetchpriority="high">-->
-<!--                                </picture>-->
-<!--                                &lt;!&ndash;                                <img class="gallery_item-img" src="../img/layout/pages/main/slider/velo.png" alt="velo">&ndash;&gt;-->
-<!--                            </a>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="auto_park_slider-button">-->
-<!--                    <button class="prev_button">-->
-<!--                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_prev" fetchpriority="high">-->
-<!--                    </button>-->
-<!--                    <button class="next_button">-->
-<!--                        <img src="../img/layout/slider/icon-arrow.png" alt="arrow_next" fetchpriority="high">-->
-<!--                    </button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
 
 <div class="header">
     <a class="header__logo" href="../index.html">
@@ -509,34 +325,22 @@
 
         <img
                 id="room1"
-                src="../img/layout/pages/main/360/bus/bus_1.png"
+                src="../img/layout/pages/main/360/bus/bus_1.jpg"
                 crossorigin="anonymous"
                 importance="high"
         />
         <img
                 id="room2"
-                src="../img/layout/pages/main/360/bus/bus_2.png"
+                src="../img/layout/pages/main/360/bus/bus_2.jpg"
                 crossorigin="anonymous"
                 importance="low"
         />
         <img
                 id="room3"
-                src="../img/layout/pages/main/360/bus/bus_3.png"
+                src="../img/layout/pages/main/360/bus/bus_3.jpg"
                 crossorigin="anonymous"
                 importance="low"
         />
-        <!-- <img
-          id="room4"
-          src="https://coddmac.store/BKL/360/Varshavskaya/4.jpg"
-          crossorigin="anonymous"
-          importance="low"
-        />
-        <img
-          id="room5"
-          src="https://coddmac.store/BKL/360/Varshavskaya/5.jpg"
-          crossorigin="anonymous"
-          importance="low"
-        /> -->
         <img
                 id="hotspot"
                 src="https://coddmac.store/BKL/360/source/Hotspot_blue_big.svg"
@@ -631,16 +435,6 @@
                     position="0 0 -10"
                     look-at
             ></a-image>
-
-            <!-- <a-entity position="0 1 6" look-at rotation="180 0 180">
-              <a-entity mixin="info-sphere" id="sphere1"> </a-entity>
-              <a-entity id="infoPanelContainer1"></a-entity>
-            </a-entity>
-
-            <a-entity position="-4.5 -1.75 -8" look-at>
-              <a-entity mixin="info-sphere" id="sphere2"> </a-entity>
-              <a-entity id="infoPanelContainer2"></a-entity>
-            </a-entity> -->
         </a-entity>
 
         <a-entity id="group-room2" scale="0 0 0">
@@ -668,37 +462,7 @@
                     position="0 1 10"
                     look-at
             ></a-image>
-            <!-- <a-image
-              spot="linkto:#room4;spotgroup:group-room4;phiStart:90"
-              src="#hotspot"
-              position="0 1 -8"
-              look-at
-            ></a-image> -->
         </a-entity>
-
-        <!-- <a-entity id="group-room4" scale="0 0 0">
-          <a-image
-            spot="linkto:#room3;spotgroup:group-room3;phiStart:120"
-            src="#hotspot"
-            position="0 1 8"
-            look-at
-          ></a-image>
-          <a-image
-            spot="linkto:#room5;spotgroup:group-room5;phiStart:90"
-            src="#hotspot"
-            position="0 1 8"
-            look-at
-          ></a-image>
-        </a-entity>
-
-        <a-entity id="group-room5" scale="0 0 0">
-          <a-image
-            spot="linkto:#room4;spotgroup:group-room4;phiStart:90"
-            src="#hotspot"
-            position="0 1 8"
-            look-at
-          ></a-image>
-        </a-entity> -->
     </a-entity>
 
     <a-entity
@@ -798,8 +562,6 @@
             });
     // }, 1500);
 </script>
-
-<!--<script type="module" src="../js/APIVectary.js"></script>-->
 <script type="module">
     import { VctrModelApi } from "https://app.vectary.com/studio-lite/scripts/api.js";
 
@@ -866,7 +628,7 @@
             }
             if (isModelLoaded) {
                 clearInterval(countInterval);
-                let acceleratedInterval = COUNT_LOAD_TIME / 10;
+                let acceleratedInterval = COUNT_LOAD_TIME / 0;
                 countInterval = setInterval(function () {
                     percent += PERCENT_STEP;
 
@@ -881,7 +643,7 @@
                         progressText.textContent = 'Мы готовы!';
                         setTimeout(function () {
                             fadeOutnojquery(preloader);
-                        }, 1600);
+                        }, 500);
                         clearInterval(countInterval);
                     }
                 }, acceleratedInterval);
