новые no ar модели

--- a/src/index.html
+++ b/src/index.html
@@ -202,6 +202,9 @@
                         <p class="traffic_patrol-text">
                             Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или аварии
                         </p>
+<!--                        <p class="traffic_patrol-text">-->
+<!--                            В&nbsp;каждой машине есть все необходимое: огнетушитель, аптечка, набор инструментов, буксировочные тросы, балонный ключ, противооткатные упоры, пусковое устройство, домкрат, жезл&nbsp;регулировщика, гайковерт, дорожные конусы, бланки европротокола, телескопическая лестница. На&nbsp;пикапах дополнительно установлено дорожное табло-->
+<!--                        </p>-->
                     </div>
                     <div class="traffic_patrol-text-3">
                         <p class="traffic_patrol-text">
