--- a/src/pages/solaris_two.html
+++ b/src/pages/solaris_two.html
@@ -486,7 +486,7 @@
     document.addEventListener("DOMContentLoaded", () => {
         const IframeObject = {
             AR_ON: 'https://www.vectary.com/p/3yUUqLuKMivlvJ7atkLNjW',
-            AR_OFF: 'https://www.vectary.com/p/0VL9N8lcfOKZty8trMbgBC'
+            AR_OFF: 'https://app.vectary.com/p/6NuJ33rcfyjJQL0OBfNqec'
         };
 
         let screenWidth = window.innerWidth;
