--- a/src/pages/kater.html
+++ b/src/pages/kater.html
@@ -317,7 +317,7 @@
   </div>
 </div>
 
-<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="https://www.vectary.com/p/7NLghh4BVi6QtYfWBIhIiD" width="100%" height="100%" class="VectaryIframe"></iframe>
+<iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="VectaryIframe"></iframe>
 <div id="overlay"></div>
 
 <a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
@@ -463,7 +463,7 @@
     document.addEventListener("DOMContentLoaded", () => {
         const IframeObject = {
             AR_ON: 'https://www.vectary.com/p/7NLghh4BVi6QtYfWBIhIiD',
-            AR_OFF: 'https://www.vectary.com/p/5XqA1vpoxjGloVklJ00a7H'
+            AR_OFF: 'https://app.vectary.com/p/2t1Cq7Ii868Z58IwHbNb6B'
         };
 
         let screenWidth = window.innerWidth;
