правки по верстке

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,8 @@
                         <a class="menu_navigation-link" href="#traffic_patrol">дорожный патруль ЦОДД</a>
                         <div class="menu_preview-block">
                             <div class="block-wrapper-video">
-                                <video class="menu_preview-video" src="./img/video/trafifk_menu.mp4" muted loop playsinline></video>
+                                <video class="menu_preview-video" src="./img/video/trafifk_menu.mp4" muted loop playsinline>
+                                </video>
                             </div>
                         </div>
                     </li>
@@ -125,6 +126,13 @@
             </nav>
             <div class="flex-filler"></div>
             <div class="menu-media">
+                <a class="media-wrapper" href="https://gucodd.ru/?utm-source=garage_codd" target="_blank" rel="noopener">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-3">
+                    <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-4">
+                    <img class="media-img" src="./img/layout/pages/main/footer/contact_internet.svg" alt="gucodd">
+                </a>
                 <a class="media-wrapper" href="https://vk.com/mosroad/?utm-source=garage_codd" target="_blank" rel="noopener">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner">
                     <img src="./img/layout/pages/main/border_corner/corner.svg" alt="стрелки" class="corner-2">
@@ -200,17 +208,14 @@
                     </div>
                     <div class="traffic_patrol-text-2">
                         <p class="traffic_patrol-text">
-                            Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве. Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или аварии
+                            Ежедневно 30&nbsp;экипажей Дорожного патруля ЦОДД курсируют по&nbsp;Москве.<br>Задача&nbsp;&mdash; регулировать движение на&nbsp;сложных участках, помогать водителям при&nbsp;поломке или аварии
                         </p>
+                    </div>
+<!--                    <div class="traffic_patrol-text-3">-->
 <!--                        <p class="traffic_patrol-text">-->
 <!--                            В&nbsp;каждой машине есть все необходимое: огнетушитель, аптечка, набор инструментов, буксировочные тросы, балонный ключ, противооткатные упоры, пусковое устройство, домкрат, жезл&nbsp;регулировщика, гайковерт, дорожные конусы, бланки европротокола, телескопическая лестница. На&nbsp;пикапах дополнительно установлено дорожное табло-->
 <!--                        </p>-->
-                    </div>
-                    <div class="traffic_patrol-text-3">
-                        <p class="traffic_patrol-text">
-                            В&nbsp;каждой машине есть все необходимое: огнетушитель, аптечка, набор инструментов, буксировочные тросы, балонный ключ, противооткатные упоры, пусковое устройство, домкрат, жезл&nbsp;регулировщика, гайковерт, дорожные конусы, бланки европротокола, телескопическая лестница. На&nbsp;пикапах дополнительно установлено дорожное табло
-                        </p>
-                    </div>
+<!--                    </div>-->
                     <div class="traffic_patrol-text-4">
                         <p class="traffic_patrol-text">
                             В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, грузовой фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом ЦОДД
@@ -408,14 +413,14 @@
                             В&nbsp;гараже Дорожного патруля 57&nbsp;автомобилей: пикап, грузовой фургон, легковая машина. Все&nbsp;автомобили ярко&#8209;зеленого цвета с&nbsp;проблесковыми маячками на&nbsp;крыше и&nbsp;логотипом&nbsp;ЦОДД
                         </p>
                     </div>
-                    <div class="traffic_patrol-text-mobile-2">
-                        <p class="traffic_patrol-text">
-                            В&nbsp;каждой машине есть все необходимое: огнетушитель, аптечка, набор инструментов, буксировочные тросы, балонный ключ, противооткатные упоры, пусковое устройство, домкрат, жезл&nbsp;регулировщика, гайковерт, дорожные конусы, бланки европротокола, телескопическая лестница. На&nbsp;пикапах дополнительно установлено дорожное табло
-                        </p>
-                        <p class="traffic_patrol-text">
-                            Дорожный патруль нельзя вызвать. Задания экипажи получают от&nbsp;дежурных Ситуационного центра ЦОДД
-                        </p>
-                    </div>
+<!--                    <div class="traffic_patrol-text-mobile-2">-->
+<!--                        <p class="traffic_patrol-text">-->
+<!--                            В&nbsp;каждой машине есть все необходимое: огнетушитель, аптечка, набор инструментов, буксировочные тросы, балонный ключ, противооткатные упоры, пусковое устройство, домкрат, жезл&nbsp;регулировщика, гайковерт, дорожные конусы, бланки европротокола, телескопическая лестница. На&nbsp;пикапах дополнительно установлено дорожное табло-->
+<!--                        </p>-->
+<!--                        <p class="traffic_patrol-text">-->
+<!--                            Дорожный патруль нельзя вызвать. Задания экипажи получают от&nbsp;дежурных Ситуационного центра ЦОДД-->
+<!--                        </p>-->
+<!--                    </div>-->
                 </div>
             </div>
 <!--            <div class="container_main_slider">-->
