--- a/src/pages/moskvich.html
+++ b/src/pages/moskvich.html
@@ -148,11 +148,17 @@
                     </div>
                 </div>
                 <div class="tech_spec__mission hidden">
-                    <p class="tech_spec__text">Задача:</p>
+                    <div class="tech_spec__mission-panel">
+                        <p class="tech_spec__text">Задача</p>
+                        <div class="tech_spec__mission-panel-background"></div>
+                    </div>
                     <p class="tech_spec__text-descr">Помощь тем, кто столкнулся с&nbsp;трудностями на&nbsp;дороге, содействие городским службам, фиксация нарушений в&nbsp;потоке</p>
                 </div>
                 <div class="tech_spec__outfit hidden">
-                    <p class="tech_spec__text">Экипировка:</p>
+                    <div class="tech_spec__outfit-panel">
+                        <p class="tech_spec__text">Экипировка</p>
+                        <div class="tech_spec__outfit-panel-background"></div>
+                    </div>
                     <ul class="tech_spec__outfit-list">
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
