--- a/src/pages/test.html
+++ b/src/pages/test.html
@@ -148,11 +148,17 @@
           </div>
         </div>
         <div class="tech_spec__mission hidden">
-          <p class="tech_spec__text">Задача:</p>
+          <div class="tech_spec__mission-panel">
+            <p class="tech_spec__text">Задача</p>
+            <div class="tech_spec__mission-panel-background"></div>
+          </div>
           <p class="tech_spec__text-descr">Регулировать движение на&nbsp;сложных участках, помогать водителям при поломке или аварии.</p>
         </div>
         <div class="tech_spec__outfit hidden">
-          <p class="tech_spec__text">Экипировка:</p>
+          <div class="tech_spec__outfit-panel">
+            <p class="tech_spec__text">Экипировка</p>
+            <div class="tech_spec__outfit-panel-background"></div>
+          </div>
           <ul class="tech_spec__outfit-list">
             <li class="tech_spec__outfit-item">
               <div class="tech_spec__outfit-img">
