зачинены мобильные видео + обработка ошибок лоадера

--- a/src/index.html
+++ b/src/index.html
@@ -163,8 +163,7 @@
     <main class="gradient_move">
         <section class="main">
             <div class="main_intro_media">
-<!--                src="./img/video/main_section_new.mp4"-->
-                <video class="preview_video" autoplay muted loop playsinline></video>
+                <video class="preview_video" preload playsinline muted loop></video>
             </div>
             <div class="main_intro_content">
                 <div class="container_main">
