--- a/src/pages/amarok.html
+++ b/src/pages/amarok.html
@@ -188,6 +188,12 @@
                         </li>
                         <li class="tech_spec__outfit-item">
                             <div class="tech_spec__outfit-img">
+                                <img fetchpriority="high" src="../img/layout/outfit/ford/outfit_1.svg" alt="Противооткатные упоры">
+                            </div>
+                            <span class="tech_spec__outfit-text">Колодки</span>
+                        </li>
+                        <li class="tech_spec__outfit-item">
+                            <div class="tech_spec__outfit-img">
                                 <img src="../img/layout/outfit/amarok/outfit_6.svg" alt="Пусковое устройство" fetchpriority="high">
                             </div>
                             <span class="tech_spec__outfit-text">Пусковое устройство</span>
@@ -339,7 +345,7 @@
 <iframe id="9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8" src="" width="100%" height="100%" class="VectaryIframe" allow="xr-spatial-tracking"></iframe>
 <div id="overlay"></div>
 
-<a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909"
+<a-scene loading-screen="enabled: true, dotsColor: #62A744, backgroundColor: #090909" xr-mode-ui="enabled: false"
          device-orientation-permission-ui="
  denyButtonText: Отказаться;
  allowButtonText: Разрешить;
@@ -391,6 +397,7 @@
 
 <script type="module">
     import { VctrModelApi } from "https://app.vectary.com/studio-lite/scripts/api.js";
+    let isModelLoaded = false;
 
     const LOADING_TIME = 50000;
     const PERCENT_STEP = 2;
@@ -400,19 +407,6 @@
     const percentEl = document.getElementById("progress-label");
     const barEl = document.getElementById("progress-bar");
     let progressText = document.getElementById("progress_text");
-
-    let VectaryIframe = document.querySelector('.VectaryIframe');
-    let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
-    let isModelLoaded = false;
-
-    async function initializeModelApi() {
-        console.log('API go!');
-        await viewerApi.init();
-        viewerApi.isReady().then(() => {
-            isModelLoaded = true;
-            console.log('Model loaded');
-        });
-    }
 
     function fadeOutnojquery(el) {
         el.style.opacity = 1;
@@ -481,22 +475,103 @@
 
     countLoad();
 
-    document.addEventListener("DOMContentLoaded", () => {
-        const IframeObject = {
-            AR_ON: 'https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU',
-            AR_OFF: 'https://www.vectary.com/p/1N0rB9dLMcEG5uH9Q7G7dL'
+    function myLoading(url) {
+        let xhr = new XMLHttpRequest();
+        xhr.open('GET', url);
+        xhr.send();
+        const startTime = new Date().getTime(); // Запоминаем время начала загрузки
+
+        // 4. Эта функция будет вызвана после получения ответа
+        xhr.onload = function() {
+            if (xhr.status !== 200) { // анализ HTTP-статуса ответа
+                console.log(`Error ${xhr.status}: ${xhr.statusText}`); // e.g. 404: Not Found
+            } else {
+                // console.log(`Done, got ${xhr.response.length} bytes`); // response - ответ сервера
+                const endTime = new Date().getTime(); // Запоминаем время завершения загрузки
+                const fileSizeInBytes = xhr.response.length;
+                const fileSizeInMegabytes = fileSizeInBytes / (1024 * 1024); // Преобразование в мегабайты
+                const downloadTimeInSeconds = (endTime - startTime) / 1000; // Преобразование в секунды
+
+                console.log(`Done, got ${fileSizeInMegabytes.toFixed(1)} MB in ${downloadTimeInSeconds.toFixed(1)} seconds`);
+                setTimeout(() => {
+                    isModelLoaded = true;
+                }, 5000);
+            }
         };
+        // UNSENT = 0; // initial state
+        // OPENED = 1; // open called
+        // HEADERS_RECEIVED = 2; // полученные заголовки ответа
+        // LOADING = 3; // происходит загрузка ответа (получен пакет данных)
+        // DONE = 4; // запрос выполнен
+        // xhr.onreadystatechange = function() {
+        //     if (xhr.readyState == 4) {
+        //         console.log('запрос выполнен');
+        //     }
+        // };
+        xhr.onerror = function() {
+            console.log("Request failed");
+        };
+    }
 
-        let screenWidth = window.innerWidth;
+    const IframeObject = {
+        AR_ON: 'https://app.vectary.com/p/05xqKl2g22Pw4ClSHgLBWU',
+        AR_OFF: 'https://www.vectary.com/p/1N0rB9dLMcEG5uH9Q7G7dL',
+        MOBILE_AR_ON: 'https://www.vectary.com/p/0GvsPRo0LNzL2q0uOZhFYD',
+        XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/cd8172d4-e177-4eba-a7cc-8ef64e6b64f9/cd8172d4-e177-4eba-a7cc-8ef64e6b64f9',
+        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/1bbd3e75-b6c7-49d3-9f62-ab09edf1150a/1bbd3e75-b6c7-49d3-9f62-ab09edf1150a',
+        XHR_MOBILE_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/b8f75d2e-2c46-476f-8b9e-379064f997f1/b8f75d2e-2c46-476f-8b9e-379064f997f1'
+    };
+    let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
+    let screenWidth = window.innerWidth;
+    let xhrFile;
+    let readySRC;
 
-        if (screenWidth >= 700 && screenWidth <= 1200) {
-            VectaryIframe.src = IframeObject.AR_OFF;
-        } else {
-            VectaryIframe.src = IframeObject.AR_ON;
+    if (screenWidth >= 700 && screenWidth <= 1200) {
+        readySRC = IframeObject.AR_OFF;
+        xhrFile = IframeObject.XHR_AR_OFF;
+    } else if (screenWidth < 700) {
+        readySRC = IframeObject.MOBILE_AR_ON;
+        xhrFile = IframeObject.XHR_MOBILE_AR_ON;
+    } else {
+        readySRC = IframeObject.AR_ON;
+        xhrFile = IframeObject.XHR_AR_ON;
+    }
+
+    async function initializeModelApi() {
+        console.log('API go!');
+        try {
+            await viewerApi.init();
+            viewerApi.isReady().then(() => {
+                isModelLoaded = true;
+                console.log('Model loaded');
+            });
+        } catch (error) {
+            console.error('Ошибка внутри API:', error);
+            myLoading(xhrFile);
         }
+    }
 
+    document.addEventListener("DOMContentLoaded", () => {
+        let VectaryIframe = document.querySelector('.VectaryIframe');
+        VectaryIframe.src = readySRC;
         initializeModelApi();
     });
+
+    // // Wait for the page to load
+    // window.onload = function () {
+    //     // Get the performance entries
+    //     let performanceEntries = performance.getEntriesByType("resource");
+    //
+    //     // Filter the entries to include all downloadable resources
+    //     let downloadableResources = performanceEntries.filter(function (entry) {
+    //         // Check if the resource has a valid URL
+    //         // return entry.name && entry.name.length > 0;
+    //         return entry.name && entry.name.length > 0;
+    //     });
+    //
+    //     // Display the list of downloadable resources in the console
+    //     console.log(downloadableResources);
+    // };
 </script>
 <script>
     // setTimeout(() => {
