--- a/src/pages/kater.html
+++ b/src/pages/kater.html
@@ -376,6 +376,7 @@
 
 <script type="module">
     import { VctrModelApi } from "https://app.vectary.com/studio-lite/scripts/api.js";
+    let isModelLoaded = false;
 
     const LOADING_TIME = 50000;
     const PERCENT_STEP = 2;
@@ -385,19 +386,6 @@
     const percentEl = document.getElementById("progress-label");
     const barEl = document.getElementById("progress-bar");
     let progressText = document.getElementById("progress_text");
-
-    let VectaryIframe = document.querySelector('.VectaryIframe');
-    let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
-    let isModelLoaded = false;
-
-    async function initializeModelApi() {
-        console.log('API go!');
-        await viewerApi.init();
-        viewerApi.isReady().then(() => {
-            isModelLoaded = true;
-            console.log('Model loaded');
-        });
-    }
 
     function fadeOutnojquery(el) {
         el.style.opacity = 1;
@@ -466,20 +454,86 @@
 
     countLoad();
 
-    document.addEventListener("DOMContentLoaded", () => {
-        const IframeObject = {
-            AR_ON: 'https://www.vectary.com/p/7NLghh4BVi6QtYfWBIhIiD',
-            AR_OFF: 'https://app.vectary.com/p/2t1Cq7Ii868Z58IwHbNb6B'
+    function myLoading(url) {
+        console.log('myLoading go!');
+        let xhr = new XMLHttpRequest();
+        xhr.open('GET', url);
+        xhr.send();
+        const startTime = new Date().getTime(); // Запоминаем время начала загрузки
+
+        // 4. Эта функция будет вызвана после получения ответа
+        xhr.onload = function() {
+            if (xhr.status !== 200) { // анализ HTTP-статуса ответа
+                console.log(`Error ${xhr.status}: ${xhr.statusText}`); // e.g. 404: Not Found
+            } else {
+                // console.log(`Done, got ${xhr.response.length} bytes`); // response - ответ сервера
+                const endTime = new Date().getTime(); // Запоминаем время завершения загрузки
+                const fileSizeInBytes = xhr.response.length;
+                const fileSizeInMegabytes = fileSizeInBytes / (1024 * 1024); // Преобразование в мегабайты
+                const downloadTimeInSeconds = (endTime - startTime) / 1000; // Преобразование в секунды
+
+                console.log(`Done, got ${fileSizeInMegabytes.toFixed(1)} MB in ${downloadTimeInSeconds.toFixed(1)} seconds`);
+                setTimeout(() => {
+                    isModelLoaded = true;
+                }, 10000);
+            }
         };
+        // UNSENT = 0; // initial state
+        // OPENED = 1; // open called
+        // HEADERS_RECEIVED = 2; // полученные заголовки ответа
+        // LOADING = 3; // происходит загрузка ответа (получен пакет данных)
+        // DONE = 4; // запрос выполнен
+        // xhr.onreadystatechange = function() {
+        //     if (xhr.readyState == 4) {
+        //         console.log('запрос выполнен');
+        //     }
+        // };
+        xhr.onerror = function() {
+            console.log("Request failed");
+        };
+    }
 
-        let screenWidth = window.innerWidth;
+    const IframeObject = {
+        AR_ON: 'https://www.vectary.com/p/7NLghh4BVi6QtYfWBIhIiD',
+        AR_OFF: 'https://app.vectary.com/p/2t1Cq7Ii868Z58IwHbNb6B',
+        XHR_AR_ON: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/883d6986-662c-4ec3-b627-7af578d871a0/883d6986-662c-4ec3-b627-7af578d871a0',
+        XHR_AR_OFF: 'https://app.vectary.com/api/vctr-repo/v2/dependencies/6e3489da-063a-448b-ac4e-2af259f06f59/6e3489da-063a-448b-ac4e-2af259f06f59'
+    };
+    let viewerApi = new VctrModelApi("9f0e8cf5-2302-46a3-8e49-0a7c4c3911d8"); // DOM Id
+    let screenWidth = window.innerWidth;
+    let xhrFile;
+    let readySRC;
 
-        if (screenWidth >= 700 && screenWidth <= 1200) {
-            VectaryIframe.src = IframeObject.AR_OFF;
-        } else {
-            VectaryIframe.src = IframeObject.AR_ON;
+    if (screenWidth >= 700 && screenWidth <= 1200) {
+        readySRC = IframeObject.AR_OFF;
+        xhrFile = IframeObject.XHR_AR_OFF;
+    } else if (screenWidth < 700) {
+        readySRC = IframeObject.MOBILE_AR_ON;
+        xhrFile = IframeObject.XHR_MOBILE_AR_ON;
+    } else {
+        readySRC = IframeObject.AR_ON;
+        xhrFile = IframeObject.XHR_AR_ON;
+    }
+
+    async function initializeModelApi() {
+        console.log('API go!');
+        try {
+            // Вызываем несуществующий метод, что приведет к ошибке (для теста)
+            // await viewerApi.nonExistentMethod();
+            await viewerApi.init();
+            viewerApi.isReady().then(() => {
+                isModelLoaded = true;
+                console.log('Model loaded');
+            });
+        } catch (error) {
+            console.error('Ошибка внутри API:', error);
+            myLoading(xhrFile);
         }
+    }
 
+    document.addEventListener("DOMContentLoaded", () => {
+        let VectaryIframe = document.querySelector('.VectaryIframe');
+        VectaryIframe.src = readySRC;
         initializeModelApi();
     });
 </script>
